--- a/README
+++ b/README
@@ -59,3 +59,7 @@ before the crash.
 Once a query has been run in the "Search" panel, any results will be added as items to a list below
 the fields that set up the query. Clicking on any item in the list will open its associated file in
 the file viewer.
+
+-------------------------------------------------------------------------------------------
+INSTRUCTIONS FOR USE: ^^      IMPORTANT IMPORTANT IMPORTANT IMPORTANT IMPORTANT IMPORTANT
+-------------------------------------------------------------------------------------------
